# DHT_Hunter

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  build.sh  bundle_web_files.py  configDir_implementation_summary.md  config_system_implementation_final_summary.md  config_system_implementation_plan.md  config_system_implementation_progress.md  config_system_implementation_summary.md  meson-wrapper.sh  meson.build  meson_options.txt  remove_logging.py  run-clang-tidy.sh  simple_rotation_test.cpp  static-analysis.md  test_rotation.cpp  verify_rotation.cpp
examples/: CMakeLists.txt  crawler_example.cpp  https_client_test.cpp  unified_event_example.cpp
examples/color_test/: CMakeLists.txt  color_test.cpp
examples/logforge_demo/: CMakeLists.txt  async_logging_demo.cpp  async_test.cpp  formatter_demo.cpp  logforge_demo.cpp  rotation_demo.cpp
examples/logging_demo/: CMakeLists.txt  async_logging_demo.cpp  formatter_demo.cpp  logging_demo.cpp
examples/metadata_fetch/: CMakeLists.txt
examples/simple_node/: CMakeLists.txt
source/bencode/: build.sh  meson.build  meson_options.txt
source/bencode/examples/: bencode_example.cpp
source/event_system/: meson.build
source/event_system/examples/: event_driven_example.cpp
src/: CMakeLists.txt  check_routing_table.cpp  main.cpp  meson.build  routing_table_check.cpp
src/bencode/: CMakeLists.txt  bencode.cpp  meson.build
src/bittorrent/: CMakeLists.txt  bt_message_handler.cpp  meson.build
src/bittorrent/metadata/: connection_pool.cpp  dht_metadata_provider.cpp  metadata_acquisition_manager.cpp  metadata_exchange.cpp  peer_health_tracker.cpp
src/bittorrent/tracker/: http_tracker.cpp  tracker_manager.cpp  udp_tracker.cpp
src/core/: CMakeLists.txt  application_controller.cpp  meson.build
src/crawler/: CMakeLists.txt  dht_crawler.cpp  infohash_collector.cpp
src/dht/: CMakeLists.txt  dht_node.cpp  dht_node_persistence.cpp  dht_node_transaction_persistence.cpp  error_message.cpp  get_peers_lookup.cpp  meson.build  message.cpp  node_lookup.cpp  peer_storage.cpp  query_message.cpp  response_message.cpp  routing_table.cpp  routing_table_persistence.cpp  transaction_persistence.cpp  types.cpp
src/dht/bootstrap/: bootstrapper.cpp  dht_bootstrapper.cpp
src/dht/core/: dht_config.cpp  dht_constants.cpp  dht_event_handlers.cpp  dht_node.cpp  dht_node_config.cpp  dht_routing_table.cpp  dht_types.cpp  node_id.cpp  persistence_manager.cpp  routing_table.cpp
src/dht/crawler/: crawler.cpp
src/dht/events/: event_bus.cpp
src/dht/extensions/: azureus_dht.cpp  kademlia_dht.cpp  mainline_dht.cpp
src/dht/network/: bt_message_handler.cpp  dht_error_message.cpp  dht_message.cpp  dht_message_handler.cpp  dht_message_sender.cpp  dht_query_message.cpp  dht_response_message.cpp  dht_socket_manager.cpp  error_message.cpp  message.cpp  message_handler.cpp  message_sender.cpp  query_message.cpp  response_message.cpp  socket_manager.cpp
src/dht/node_lookup/: node_lookup.cpp  node_lookup_query_manager.cpp  node_lookup_response_handler.cpp  node_lookup_utils.cpp
src/dht/peer_lookup/: peer_lookup.cpp  peer_lookup_announce_manager.cpp  peer_lookup_query_manager.cpp  peer_lookup_response_handler.cpp  peer_lookup_utils.cpp
src/dht/persistence/: dht_persistence_manager.cpp
src/dht/routing/: dht_node_lookup.cpp  dht_peer_lookup.cpp  dht_routing_manager.cpp  node_lookup.cpp  node_verifier.cpp  peer_lookup.cpp  routing_manager.cpp
src/dht/services/: statistics_service.cpp
src/dht/storage/: dht_peer_storage.cpp  dht_token_manager.cpp  peer_storage.cpp  token_manager.cpp
src/event/: CMakeLists.txt  event_system.cpp
src/logforge/: CMakeLists.txt  log_initializer.cpp  logforge.cpp
src/logging/: CMakeLists.txt  logger.cpp
src/metadata/: CMakeLists.txt  bt_connection.cpp  bt_connection.cpp.fixed  bt_connection.cpp.new  bt_handshake.cpp  extension_protocol.cpp  metadata_fetcher.cpp  metadata_storage.cpp  torrent_file.cpp  torrent_file_builder.cpp  ut_metadata.cpp
src/network/: CMakeLists.txt  async_socket.cpp  async_socket_factory.cpp  buffer_pool.cpp  burst_controller.cpp  connection_pool.cpp  connection_pool_manager.cpp  connection_throttler.cpp  http_client.cpp  http_server.cpp  io_multiplexer.cpp  meson.build  network_address.cpp  rate_limiter.cpp  retry_manager.cpp  socket.cpp  socket_factory.cpp  socket_impl_common.cpp  socket_impl_core.cpp  ssl_client.cpp  tcp_client.cpp  tcp_socket_impl.cpp  udp_client.cpp  udp_message_batcher.cpp  udp_reliability.cpp  udp_server.cpp  udp_socket.cpp  udp_socket_impl.cpp
src/service/: CMakeLists.txt  service_locator.cpp
src/storage/: CMakeLists.txt  metadata_storage.cpp  metadata_storage_adapter.cpp  test_metadata_storage.cpp  test_metadata_storage_adapter.cpp
src/tests/: CMakeLists.txt  meson.build  test_dht_core_utils.cpp
src/types/: CMakeLists.txt  dht_types.cpp  endpoint.cpp  event_types.cpp  info_hash.cpp  info_hash_metadata.cpp  meson.build  message_types.cpp  node_id.cpp
src/ui/: CMakeLists.txt
src/unified_event/: CMakeLists.txt  event.cpp  event_bus.cpp  meson.build
src/util/: CMakeLists.txt  filesystem_utils.cpp  hash.cpp  process_utils.cpp
src/utility/: CMakeLists.txt  meson.build
src/utils/: CMakeLists.txt  common_utils.cpp  config_utils.cpp  dht_core_utils.cpp  domain_utils.cpp  event_utils.cpp  meson.build  misc_utils.cpp  network_utils.cpp  system_utils.cpp
src/web/: CMakeLists.txt  meson.build  web_bundle_manager.cpp  web_server.cpp
test/: CMakeLists.txt
test/unit/: CMakeLists.txt
tests/: CMakeLists.txt  meson.build  run_regression_tests.sh  run_test.sh  run_unit_tests.sh  simple_bencode_test.cpp  simple_endpoint_test.cpp  simple_info_hash_test.cpp  simple_node_id_test.cpp
tests/integration/: CMakeLists.txt
tests/network/: CMakeLists.txt  https_client_test.cpp
tests/regression/: basic_startup_test.sh
tests/unit/: CMakeLists.txt  meson.build
tests/utils/: CMakeLists.txt  common_utils.hpp  common_utils_test.cpp  domain_utils.hpp  domain_utils_test.cpp  system_utils.hpp  system_utils_test.cpp
(+522 files in other folders)
